--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -3,9 +3,15 @@
 <!-- The android:opacity=”opaque” line — this is critical in preventing a flash of black as your theme transitions. -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" android:opacity="opaque">
 
-    <!-- The background color, preferably the same as your normal theme -->
-    <item android:drawable="@android:color/white"/>
-
+    <item>
+        <shape
+            android:shape="rectangle">
+            <gradient
+                android:startColor="@color/carminePink"
+                android:endColor="@color/blond"
+                android:angle="45"/>
+        </shape>
+    </item>
     <!-- Your product logo - 144dp color version of your app icon -->
     <item>
 
